new product link

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,11 @@
 <div>
  <h4>Product: <%= @product.name %></h4>
   <a href="/"> Back to all products </a>
+  <% @product.each do |image| %>
+      <div>
+        <img src="<%=image.image%>" class="img-responsive">
+      </div>
+    <% end %>
   <p>Price: <%= @product.price %></p>
   <p>What is it? </p>
   <p><%= @product.description %></p>
