--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
 <h3> All Products </h3>
+<p><a href="/products/new"> New Product?</p>
 
 <div class="container">
   <% @products.each do |product| %>
@@ -10,6 +11,7 @@
       </a>
     </div>
     <div>
+      <img src="<%= product.images.first.image %>" class="img-responsive" alt="<%= product.name %>">
       <%= product.price %>
       <%= product.description %>
     </div>
