--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,16 @@
 <h4> Sign Up! </h4>
+
+<%= form_tag "/users", method: :post do%>
+  <div>
+    Name: <input type="text" name="name">
+  </div>
+  <div>
+    Email: <input type="text" name="email">
+  </div>
+  <div>
+    Password: <input type="text" name="password">
+  </div>
+  <div>
+    Password confirmation: <input type="text" name="password_confirmation">
+  </div>
+<%= submit_tag "Create Account", class: "btn btn-primary" %>
