user login and logout flash success/warning created

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,3 +14,4 @@
     Password confirmation: <input type="text" name="password_confirmation">
   </div>
 <%= submit_tag "Create Account", class: "btn btn-primary" %>
+<% end %>
