--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,21 @@
+<div class="jumbotron">
+  <h1>These Are Products!</h1>
+  <p>Everyone loves buying products!</p>
+  <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign-up!</a></p>
+  <p><a class="btn btn-primary btn-lg" href="/login" role="button">Log in!</a></p>
+</div>
+
+
+
+
 <h3> All Products </h3>
 <p><a href="/products/new"> New Product?</a></p>
 <p> You've visited this page <%= @page_count %> times!
+<div class="row">
+  <div class="container">
+    <a href="/signup"> Sign up!</a>
+  </div>
+</div>
 <div class="container">
   <% @products.each do |product| %>
   <div>
