navbar with dropdown options add

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,3 +15,5 @@
   </div>
 <%= submit_tag "Create Account", class: "btn btn-primary" %>
 <% end %>
+
+<p><a class="btn btn-primary btn-lg" href="/login" role="button">Whoops-I'm already a user</a></p>
