add order model and its relationships

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -37,8 +37,8 @@
     <div class="jumbotron">
       <h6> Hi! <%= current_user.name %>!</h6>
       <p>Wanna buy some products?</p>
-      <p><a class="btn btn-primary btn-lg" href="/signup" role="button">All Products</a></p>
-      <p><a class="btn btn-primary btn-lg" href="/login" role="button">My Products</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/products" role="button">All Products</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/products" role="button">My Products</a></p>
     </div>
   <% else %> 
     <div class="jumbotron">
