--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -5,7 +5,7 @@
     <%= text_field_tag :name, "", class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= label_tag :sdescription %>
+    <%= label_tag :description %>
     <%= text_field_tag :description, "", class: 'form-control' %>
   </div>
   <div class="form-group">
