order controller working

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">All Products<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Suppliers</a></li>
+        <li><a href="/login">Login!</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
 
 <h3> All Products </h3>
 <p><a href="/products/new"> New Product?</a></p>
-<p> You've visited this page <%= @page_count %> times!
+<p> You've visited this page <%= @page_count %> times!</p>
 <div class="row">
   <div class="container">
     <a href="/signup"> Sign up!</a>
