add category_products table

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,8 +48,9 @@
       <p><a class="btn btn-primary btn-lg" href="/login" role="button">Log in!</a></p>
     </div>
   <% end %>
-</section
+</section>
 
+<section>
 <h3> All Products </h3>
 <p><a href="/products/new"> New Product?</a></p>
 <p> You've visited this page <%= @page_count %> times!</p>
@@ -74,3 +75,4 @@
   </div>
   <% end %>
 </div>
+</section>
