--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
         <p><%= form_tag "/orders", method: :post do %> 
           <%= label_tag :quantity %>
           <input type="text" name="quantity">
-          <input type="text" name="product_id">
+          <input type="hidden" name="product_id" value="<%= @product_id %>">
           <%= submit_tag "Buy" %>
           <% end %> </p>
     </div>
