--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,52 @@
   </head>
 
   <body>
-  <div class="container">
+  <header>
+  <nav class="navbar navbar-default">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only"> Toggle Navigation </span>
+        <span class="incon-bar"></span>
+        <span class="incon-bar"></span>
+        <span class="incon-bar"></span>
+      </button>
+    </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "Add New Product", "products/new", class: "btn btn-default" %></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <%= form_tag "/products", method: :get do %>
+              Search: <input type="text" name="form_name">
+              <input type="submit" value="Search!">
+            <% end %>
+            <li class="divider"></li>
+            <li><a href="/products?sort_by=price&sort_order=asc">Sort by price ascending</a></li>
+            <li><a href="/products?sort_by=price&sort_order=desc">Sort by price descending</a></li>
+            <!-- <li><a href="/products?sort_by=price ASC">Sort by price ascending</a></li> -->
+            <!-- <li><a href="/products?sort_by=price DESC">Sort by price descending</a></li> -->
+            <li class="divider"></li>
+            <li><a href="/products?discounted=true">Only show discounted products</a></li>
+            <li class="divider"></li>
+            <!-- <li><a href="/products?category=Weapons">Only show weapons</a></li> -->
+            <!-- <li><a href="/products?category=Tools">Only show tools</a></li> -->
+            <!-- <li><a href="/products?category=Alien artifacts">Only show alien artifacts</a></li> -->
+            <% Category.all.each do |category| %>
+              <li><a href="/products?category=<%= category.name %>"><%= category.name %></a></li>
+            <% end %>
+            <li class="divider"></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
       <% flash.each do |name, message| %>
         <div class="alert alert-<%= name %> alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
