--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
 
 
 
-        <p><%= form_tag "/checkout", method: :post do %> 
+        <p><%= form_tag "/cart", method: :post do %> 
           <%= label_tag :quantity %>
           <input type="text" name="quantity">
           <input type="hidden" name="product_id" value="<%= @product_id %>">
