--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,20 +1,3 @@
+<h4> Shit you bought: <h4>
 
-<section>
-  <div class="row">
-  </div>
-  <div class="col-sm-8 col-sm-offset-2">
-    <h4> Order Info </h4>
-    <p> Quantity: <%= @order.quantity %> </p>
-  </div>
-  <div>
-  </div>
-</section>
 
-<section>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-</section>
