--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,3 +1,7 @@
 <h4> Shit you bought: <h4>
 
+<p><%= @order.id %></p>
+<p><%= @order.user.email %></p>
+<p><%= @order.created_at.strftime("%b %e, %l:%M %p") %></p>
+
 
