--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,16 +1,28 @@
 <h4> Add New Product </h4>
-<%= form_tag '/products', method: :post do  %>
-  <div class="form-group">
-    <%= label_tag :name %>
-    <%= text_field_tag :name, "", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :description %>
-    <%= text_field_tag :description, "", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :price %>
-    <%= text_field_tag :price, "", class: 'form-control' %>
-  </div>
-<%= submit_tag "Add product", class: "btn btn-primary" %>
-<% end %>
+
+        <% if @product.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
+         
+            <ul>
+            <% @aproduct.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+        <%= form_tag '/products', method: :post do  %>
+          <div class="form-group">
+            <%= label_tag :name %>
+            <%= text_field_tag :name, "", class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= label_tag :description %>
+            <%= text_field_tag :description, "", class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= label_tag :price %>
+            <%= text_field_tag :price, "", class: 'form-control' %>
+          </div>
+        <%= submit_tag "Add product", class: "btn btn-primary" %>
+        <% end %>
